--- a/.github/workflows/daily_scraper.yml
+++ b/.github/workflows/daily_scraper.yml
@@ -2,7 +2,8 @@ name: Taeglicher Podcast Scraper
 
 on:
   schedule:
-    - cron: '0 4 * * *'
+    # 04:17 UTC (05:17 Uhr deutsche Zeit) - umgeht die Server-Überlastung!
+    - cron: '17 4 * * *'
   workflow_dispatch: 
 
 jobs:
@@ -28,19 +29,16 @@ jobs:
       - name: Scraper ausfuehren
         run: python scraper.py
 
-    - name: Speichern und Push
+      - name: Speichern und Push
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action Bot"
           
-          # 1. Die neuen Dateien erst dem "Warenkorb" hinzufügen
+          # 1. Die neuen Textdateien vormerken
           git add *.txt
           
-          # 2. Den Warenkorb lokal speichern (Commit)
-          git commit -m "Automatisches Transkript Update: $(date +'%Y-%m-%d')" || echo "Keine neuen Daten"
+          # 2. Lokal abspeichern (Commit)
+          git commit -m "Automatisches Transkript Update: $(date +'%Y-%m-%d')" || echo "Keine neuen Daten zum Speichern"
           
-          # 3. JETZT erst prüfen, ob es Updates auf GitHub gibt (Rebase)
-          git pull origin main --rebase
-          
-          # 4. Alles zusammen hochladen
-          git push origin main
+          # 3. Änderungen vom Server holen und sauber einreihen (Rebase)
+          git
