--- a/.github/workflows/daily_scraper.yml
+++ b/.github/workflows/daily_scraper.yml
@@ -2,7 +2,6 @@ name: Taeglicher Podcast Scraper
 
 on:
   schedule:
-    # 04:17 UTC (05:17 Uhr deutsche Zeit) - umgeht die Server-Überlastung!
     - cron: '17 4 * * *'
   workflow_dispatch: 
 
@@ -24,7 +23,9 @@ jobs:
           python-version: '3.10'
 
       - name: Werkzeuge installieren
-        run: pip install -r requirements.txt
+        run: |
+          pip install -r requirements.txt
+          playwright install chromium
 
       - name: Scraper ausfuehren
         run: python scraper.py
